# AionCore

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  justfile  mcp-workflow-proposal-ELECTRON-1C9.json  mcp-workflow-proposal-ELECTRON-1Y.json  mcp-workflow-proposal-ELECTRON-6W.json  mcp-workflow-proposal-ELECTRON-9A.json  mcp-workflow-proposal-ELECTRON-9D.json  mcp-workflow-proposal-ELECTRON-JH.json  mcp-workflow-proposal-ELECTRON-Q8.json  mcp-workflow-proposal-ELECTRON-RF.json  mcp-workflow-proposal-ELECTRON-WA.json  release-notes.md  swap-aioncore.sh
.github/workflows/: release.yml
crates/aion-cli/: Cargo.toml
crates/aion-cli/src/: app.rs  client.rs  event.rs  lib.rs  main.rs  markdown.rs  ui.rs
crates/aion-cli/tests/: app_test.rs  smoke.rs
crates/aionui-ai-agent/: Cargo.toml
crates/aionui-ai-agent/src/: acp_agent.rs  acp_protocol.rs  agent_registry.rs  agent_task.rs  auxiliary_routes.rs  factory.rs  lib.rs  registry.rs  remote_agent_service.rs  runtime_status.rs  service.rs  stream_event.rs  types.rs
crates/aionui-ai-agent/tests/: acp_agent_integration.rs  acp_module_surface.rs  agent_types_integration.rs
crates/aionui-api-types/src/: acp.rs  agent.rs  agent_discovery.rs  assistant.rs  channel.rs  conversation.rs  lib.rs  mcp.rs  runtime.rs  skill.rs  workspace_watcher.rs
crates/aionui-app/: Cargo.toml
crates/aionui-app/src/: cli.rs  config.rs  lib.rs  main.rs  (+2 more)
crates/aionui-channel/: Cargo.toml
crates/aionui-runtime/: Cargo.toml  build_support.rs
crates/aionui-team/: Cargo.toml
data/: aionui.db
docs/api-spec/: 00-module-index.md
(+244 files in other folders)
