[package]
name = "aion-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "aion"
path = "src/main.rs"

[lib]
name = "aion_cli"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
syntect = { workspace = true }
